--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="André's Portfolio Page">
     <meta property="og:type" content="website">
     <meta property="og:description" content="My personal website and portfolio page" <!-- Stylesheets -->
-    <link rel="stylesheet" href="styles/_global.css">
+    <link rel="stylesheet" href="./styles/_global.css">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
