Fix several styles bugs and update urls

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <a class="button" href="https://www.linkedin.com/in/andr%C3%A9-pinho-174932111/" target="_blank">
                         <i class="fa fa-linkedin fa-4x"></i>
                     </a>
-                    <a class="button" href="https://github.com/Miglas13" target="_blank">
+                    <a class="button" href="https://github.com/andrepinho13" target="_blank">
                         <i class="fa fa-github fa-4x"></i>
                     </a>
                     <a class="button" href="mailto:andremsp95@gmail.com" target="_blank">
